# rastreator

./: README.md  install.sh  rastreator_install.sh
Notebooks/SLAM_Landmark_adjustment/: Extended_Kalman_Filter.ipynb
doc/Notebooks/SLAM_Landmark_adjustment/.ipynb_checkpoints/: Extended_Kalman_Filter-checkpoint.ipynb
doc/installation/: Gazebo installation.md  Local variables for ROS2 and Gazebo.md  ROS2 Eloquent installation.md  ROS2 Foxy installation.md  ROS2 Foxy requirements.md  Welcome_page.md
installer/: simulation_requirements.txt
rastreator/rastreator_bringup/: CMakeLists.txt  package.xml
rastreator/rastreator_bringup/launch/: start_real.launch.py  start_real_csicam.launch.py  start_real_intelrealsense.launch.py  start_real_lidar.launch.py  start_real_t265.launch.py  start_sim.launch.py
rastreator/rastreator_bringup/launch/components/: lidar.launch.py  rviz2.launch.py  sp_csicam.launch.py  sp_intelrealsense.launch.py  start_lidar.launch.py  state_publisher.launch.py  stop_lidar.launch.py  tf2.launch.py
rastreator/rastreator_camera/: CMakeLists.txt  README.md  install_intelrealsense.md  package.xml
rastreator/rastreator_camera/bash/: csi_local.sh  csi_stream.sh  intel_D435_local.sh  intel_D435_stream.sh
rastreator/rastreator_camera/include/rastreator_camera/: csi_streamer.hpp  picam_streamer.hpp  usb_streamer.hpp
rastreator/rastreator_camera/launch/: calibrate_cam.launch.py  csi_cam.launch.py  csi_compress.launch.py  csi_uncompress.launch.py  orb_slam2_csi_loc_launch.py  orb_slam2_csi_map_launch.py  picam.launch.py  usb_cam.launch.py
rastreator/rastreator_camera/launch/intelrealsense/: d435.launch.py  intel_multicam.launch.py  t265.launch.py
rastreator/rastreator_camera/param/: csi_calibration_120.json  csi_calibration_120.yaml  csi_calibration_30.yaml  csi_conf.yaml  orb_csi_mono_localization.yaml  orb_csi_mono_mapping.yaml  picam_calibration.json  picam_calibration.yaml  picam_conf.yaml  usb_calibration.yaml  usb_conf.yaml
rastreator/rastreator_camera/src/: csi_streamer.cpp  picam_streamer.cpp  usb_streamer.cpp
rastreator/rastreator_description/: CMakeLists.txt  README.md  package.xml
rastreator/rastreator_description/mesh/: caster_wheel.stl  intelrealsenseT265.stl
rastreator/rastreator_description/model/casa/: model.config  model.sdf
rastreator/rastreator_description/model/rastreator_description/: model.config  model.sdf
rastreator/rastreator_description/model/rastreator_description/mesh/: caster_wheel.stl  imu.stl  intelrealsenseD435.stl  intelrealsenseT265.stl  rplidar_a3.stl
rastreator/rastreator_description/rviz/: config1.rviz  mapping.rviz  rastreator_only.rviz  sim1.rviz  sim_manual_lidar.rviz
rastreator/rastreator_description/urdf/: rastreator.urdf  rastreator.xacro  rastreator_csicam.urdf  rastreator_csicam.xacro  rastreator_intelrealsense.urdf  rastreator_intelrealsense.xacro
rastreator/rastreator_description/world/empty_world/: rastreator  rastreator_home
rastreator/rastreator_description/world/small_house/: rastreator_home
rastreator/rastreator_interfaces/: CMakeLists.txt  package.xml
rastreator/rastreator_interfaces/msg/: Control2.msg  EKF.msg  State3.msg
rastreator/rastreator_joystick/: CMakeLists.txt  README.md  package.xml
rastreator/rastreator_joystick/include/rastreator_joystick/: joystick.hpp
rastreator/rastreator_joystick/launch/: start.launch.py
rastreator/rastreator_joystick/param/: config.yaml
rastreator/rastreator_joystick/src/: joystick.cpp
rastreator/rastreator_navigation2/: CMakeLists.txt  README.md  package.xml
rastreator/rastreator_navigation2/launch/: mapping_cartographer.launch.py  mapping_stbox.launch.py  start_bringup.launch.py  start_localization.launch.py  start_navigation.launch.py
rastreator/rastreator_navigation2/launch/simulation/: localization_sim.launch.py  mapping_cartographer_sim.launch.py  mapping_stbox_sim.launch.py
rastreator/rastreator_navigation2/map/: casa_cartographer.pgm  casa_cartographer.yaml  map.pgm  map.yaml
rastreator/rastreator_navigation2/param/: localization.yaml  localization_sim.yaml  mapper_cartographer_camera.lua  mapper_cartographer_lidar.lua  mapper_stbox.yaml  navigation.yaml
rastreator/rastreator_navigation2/rviz/: default.rviz
rastreator/rastreator_simulation/: README.md  package.xml  setup.cfg  setup.py
rastreator/rastreator_simulation/launch/: constant_cmd.launch.py  ekf_sim.launch.py
rastreator/rastreator_simulation/param/: config.yaml
rastreator/rastreator_simulation/rastreator_simulation/: constant_cmd.py  ekf_simulation.py
rastreator/rastreator_simulation/utils/: ekf.py
rastreator/rastreator_wheelmotor/: CMakeLists.txt  package.xml
rastreator/rastreator_wheelmotor/include/rastreator_wheelmotor/: control_table.hpp  dynamixel_sdk_wrapper.hpp  wheel_js.hpp  wheel_odometry.hpp  wheelmotor.hpp
rastreator/rastreator_wheelmotor/launch/: start.launch.py
rastreator/rastreator_wheelmotor/param/: config.yaml
rastreator/rastreator_wheelmotor/src/: dynamixel_sdk_wrapper.cpp  wheel_js.cpp  wheel_odometry.cpp  wheelmotor.cpp
rastreator/service/: .start_cam.sh.swp  orb_loc.sh  orb_map.sh  start_cam.sh
rastreator/usb_rules/: create_udev_rules.sh  delete_udev_rules.sh
tests/motors/: dxl_set_velocity.cpp
usb_rules/: rplidar.rules  wheelmotors.rules
