<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rastreator_bringup</name>
  <version>0.0.0</version>
  <description>RASTREATOR: Bringup package</description>
  <maintainer email="lorente.inaki@gmail.com">iggyrrieta</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rastreator_description</exec_depend>
  <!--<exec_depend>jetbot_node</exec_depend>-->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
