<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rastreator_simulation</name>
  <version>0.0.0</version>
  <description>rastreator_simulation: Simulation package</description>
  <maintainer email="lorente.inaki@gmail.com">iggyrrieta</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rastreator_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
